v0.01:
Initial state

v0.02:
First running version
* The v0.01 was not the newest version

v0.03:
* Plugin wait: the min-height of the page was too short:
** missing frame "text_area" added
* Creation of a compatible config file (fullstory backend)

v0.04:
* Change URL encoding: install.php/home -> install.php?page=home
* Debianization + packaging: new subdirectory structure 
** subdirs: + base/, + debian/)
** files moved to base/: *.php (except install.php), *.conf, *.css, *.html
** file moved to images/: siduction_logo.png
** new function readFileFromPlugin()
** additional paramter subdir: buildNameWithLanguage(), findFileByLanguage()
* page changing with relative urls
* .gitignore adapted: generated files of dpkg-buildpackage. tmp moved to /var/lib/sidu-installer
* debian control: VCS info corrected. Dependancy reduces (enables test installation)
* new: ./files, sidu-installer.substvars (dpkg-buildpackage)
* shellserver.sh: config file in /etc/sidu-installer. Creating and chmod of task directory.
* install.sh: configfile from /etc/sidu-installer Fix: building answer file, removing progress file
* temporary files now in /var/lib/sidu-installer
* format of the progress file: may be a factor (0..1.0) instead of procent. "end" means 100%
* Fix: timezoneinfo.txt will be created in ${tempdir}