@@ -93,6 +93,9 @@ mountpoint.txt_label=Label
 mountpoint.txt_info=Additional info
 mountpoint.txt_size=Size
 mountpoint.txt_parttype=Part.type
+mountpoint.opt_mountonboot=no;yes
+mountpoint.txt_mount_on_boot=Mount on boot?
+mountpoint.txt_desc_mount_on_boot= 
 
 boot.txt_bootloader=Bootloader and Timezone
 boot.txt_description=A bootmanager allows you to choose the operating system you want to boot at startup.
