@@ -95,6 +95,9 @@ mountpoint.txt_label=Bezeichnung
 mountpoint.txt_info=Zusatzinformation
 mountpoint.txt_size=Größe
 mountpoint.txt_parttype=Part.typ
+mountpoint.opt_mountonboot=nein;ja
+mountpoint.txt_mount_on_boot=Beim Booten mounten?
+mountpoint.txt_desc_mount_on_boot= 
 
 boot.txt_bootloader=Bootloader und Zeitzone
 boot.txt_description=Ein Bootmanager erlaubt dir, das Betriebssystem beim Start zu wählen, das du willst.
